# NEP_Reference

./: README.md  pyproject.toml
mediabank-qa-automation-metadata/: README.md  docker-build-and-run-thirdparty-stubs.sh  docker-compose-ofbl.yml  docker-compose-xfl.yml  gcp.json  pyproject.toml
mediabank-qa-automation-metadata/features/: ofbl_integration.feature  xfl_integration.feature
mediabank-qa-automation-metadata/resources/ofbl/: ofbl.xml  ofbl_updated.xml
mediabank-qa-automation-metadata/step_functions/: conftest.py  database_steps.py  docker_steps.py  general_steps.py
mediabank-qa-automation-metadata/step_functions/features_tests/: test_ofbl_integration.py  test_xfl_integration.py
mediabank-qa-automation-metadata/step_functions/ofbl_integration/: ofbl_steps.py
mediabank-qa-automation-metadata/step_functions/utils/: datautils.py
mediabank-qa-automation-metadata/step_functions/xfl_integration/: xfl_steps.py
